tests/baselines/reference/arithmeticOnInvalidTypes2.errors.txt
==== tests/cases/compiler/arithmeticOnInvalidTypes2.ts (7 errors) ====
    var obj = function f<T>(a: T, b: T) {
        var z1 = a + b;
                 ~
!!! arithmeticOnInvalidTypes2.ts(2,14): error TS2111: Invalid '+' expression - types not known to support the addition operator.
        var z2 = a - b;
                 ~
!!! arithmeticOnInvalidTypes2.ts(3,14): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~
!!! arithmeticOnInvalidTypes2.ts(3,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var z3 = a * b;
                 ~
!!! arithmeticOnInvalidTypes2.ts(4,14): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~
!!! arithmeticOnInvalidTypes2.ts(4,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        var z4 = a / b;
                 ~
!!! arithmeticOnInvalidTypes2.ts(5,14): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                     ~
!!! arithmeticOnInvalidTypes2.ts(5,18): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
        return a;
    };